--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300&display=swap');
 
 * {
   box-sizing: border-box;
@@ -69,12 +69,19 @@ h2 {
 
 .btn {
   border: none;
-  background-color: #134297;
+  background-color: #113774;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   padding: 8px 12px;
   cursor: pointer;
   border-radius: 0.2rem;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-out;
+}
+.btn:hover {
+  background-color: #134297;
 }
 .btn:active {
   outline: none;
